--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,6 @@
 * How to use AMQ Online
 
 
-
 :sectnums:
 
 == AMQ Online Components
@@ -135,6 +134,14 @@ IMPORTANT: Each application owner will create separate Address and AddressSapce 
  |No |Yes
 |===
 
+== Installing AMQ Online on OpenShift 4.x server
+
+There are two ways for installing AMQ online.
+
+. Using the source files for RedHat portal.
+. Using the AMQ online operator from OperatorHub.
+
+* For ease of use i created a oc cli script which effectively use OperatorHub for installation link:script/install-amq-online.sh[install-amq-online.sh].
 
 == JMS clients and libraries
 There are multiple JMS Clients depending on the underlying Messaging Protocol (as shown in above table) each one have a set features and may have also some limitations.
